tests/ui/extend/extend_attr_field_field.stderr
error: More than one field with `extend` attribute
 --> tests/ui/extend/extend_attr_field_field.rs:7:5
  |
7 |     #[extend(usize)]
  |     ^

error: More than one field with `extend` attribute
 --> tests/ui/extend/extend_attr_field_field.rs:5:5
  |
5 |     #[extend(usize)]
  |     ^

error: More than one field with `extend` attribute
  --> tests/ui/extend/extend_attr_field_field.rs:12:65
   |
12 | struct UnnamedMultiAttrStructField(#[extend(usize)] Vec<usize>, #[extend(usize)] bool);
   |                                                                 ^

error: More than one field with `extend` attribute
  --> tests/ui/extend/extend_attr_field_field.rs:12:36
   |
12 | struct UnnamedMultiAttrStructField(#[extend(usize)] Vec<usize>, #[extend(usize)] bool);
   |                                    ^
